# CppHW

./: CosmicRayDetector.cc  README.md  SiMpLe HeLlO wOrLd.cc  class1.cpp  class2.cpp  lattice_points.cc  memory_leak.cc  timus_1124_mozaic.cc
29.10.2022/: class3.cpp  class4.cpp
ClassWork 03.12/: arr4.cc  arr5.cc  arr6(timus_1139).cc
ClassWork 03.12.2022/: arr1.cc  arr2.cc  arr3.cc  arr6(timus_1139).cc  arr7(timus1490).cc
ClassWork 13.05.2023/: g.cc  g3.cc  g4.cc  kekeke.cc  task425.cc  task453.cc  task730.cc  task991.cc  task_425.cc  task_453_works.cc  task_730.cc
ClassWork 15.04.2023/: GetMax_Stack.cc  GetMax_Stack.hh  TextEditor.cc  TextEditor.hh  Version_Stack.cc  Version_Stack.hh  task1.cc  task2.cc  task3.cc  tmp.cc
ClassWork 19.11/: task3.cc  task4.cc  task5.cc  task7.cc
ClassWork 19.11.2022/: task2.cc  task6.cc  task7.cc
ClassWork 22.04.2023/: eieo.cc  timus_1314_Pogonya_v_metro.cc  timus_1709_Pingui-Avia.cc  trash.cc
ClassWork 26.11/: task1.cc  task2.cc  task3.cc  task4.cc  task5.cc
ClassWork 26.11.2022/: task5.cc
ClassWork 29.04.2023/: maze-w-doors.txt  maze.txt  task1_labyrinth-with-portals.cc  task2_maze-with-doors.cc  tmp2.cc
HW Till 25.02/: task1.cc  task1_header.h
HW till 02.12/: task118_Josepsh_Flaviy.cc  task517_bowling.cc  task551_zayac_i_derevo.cc  task677_kolichestov_uchastnikov_olimpiadi.cc  task851_krugliy_stol.cc  task875_igra_jizn.cc  (+1 more)
HW till 02.12.2022/: task528_zamok.cc  task546_pechat_bukleta.cc  task564_zabor.cc  task875_igra_jizn.cc  tasks.txt
HW till 11.03.2023/excel_read/: CMakeLists.txt  main.cpp
(+145 files in other folders)
